--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   },
   "author": "",
   "license": "ISC",
+  "engines": {
+  "node": "8.11.x"
+  },
   "dependencies": {
     "express": "^4.15.3",
     "mongodb": "^2.2.29",
